--- a/src/app/courier-payout/courier-payout.component.scss
+++ b/src/app/courier-payout/courier-payout.component.scss
@@ -11,7 +11,7 @@
     margin: 0px;
 }
 .exportreport{
-    background: #21AA47;
+    background: #ed1c24;
     border-radius: 5px;
     color: #fff;
     border: none;
