--- a/src/app/couriers/couriers.component.html
+++ b/src/app/couriers/couriers.component.html
@@ -59,7 +59,7 @@
                       <input type="text" placeholder="Search Couriers" class="form-control"
                         (input)="searchCourier($event)">
                       <div class="input-group-append"><button type="submit" value="search" class="btn btnsearch"
-                          style="background: #21AA47;"><i class="fas fa-search text-white"></i></button></div>
+                          style="background: #ed1c24;"><i class="fas fa-search text-white"></i></button></div>
                     </div>
 
                   </div>
