--- a/src/app/couriers/couriers.component.scss
+++ b/src/app/couriers/couriers.component.scss
@@ -28,7 +28,7 @@ p.font {
 .spinner {
     font-weight: 600;
     font-size: 20px;
-    color: #21aa47;
+    color: #ed1c24;
 }
 
 .courier_count {
@@ -130,7 +130,7 @@ input.form-control:focus {
 }
 
 .btnsearch {
-    background-color: #21AA47 !important;
+    background-color: #ed1c24 !important;
     border-radius: 0px 5px 5px 0px !important;
 }
 
@@ -200,7 +200,7 @@ button.mat-focus-indicator.mat-raised-button.mat-button-base.mat-primary {
 }
 button.mat-focus-indicator.mat-raised-button.mat-button-base {
     margin-right: 10px;
-    background: #21aa47;
+    background: #ed1c24;
     color: #fff;
 }
 .mat-stroked-button {
