--- a/src/app/customer-view/customer-view.component.scss
+++ b/src/app/customer-view/customer-view.component.scss
@@ -37,8 +37,8 @@ span{
     line-height: 28px;
 }
 .fa-arrow-left {
-  background: #21aa47;
-  color: white;
+  background: #ed1c24 !important;
+  color: #fff !important;
   padding: 13px;
   border-radius: 6px;
 }
