--- a/src/app/customers/customers.component.scss
+++ b/src/app/customers/customers.component.scss
@@ -1,6 +1,6 @@
 
 .export-btn{
-  background-color: #21aa47;
+  background-color: #ed1c24 !important;
   color:#fff;
 }
 
@@ -21,7 +21,7 @@
 .spinner {
   font-weight: 600;
   font-size: 20px;
-  color: #21aa47;
+  color: #ed1c24;
 }
 
 .buttons{
