--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
                       <img class="logo_sealed dash_logo" src="assets/images/box1.png">
                     </div>
                     <div class=" radio" align="end">
-                      <h4><b>{{b2cnew}}</b></h4>
+                      <h4><b>{{b2ccompleted}}</b></h4>
                       <p class="new-trip">Completed B2C trip</p>
                     </div>
                   </div>
