--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -17,7 +17,7 @@
                     <!-- Logo icon -->
                     <b>
 
-                        <img src="assets/images/Sealed logo file_White 3 2.png" alt="homepage" class="light-logo logo-width">
+                        <img src="assets/images/fast-x_logo.png" alt="homepage" class="light-logo logo-width">
                     </b>
                     <!--End Logo icon -->
 
