--- a/src/app/mobile-app-trips/mobile-app-trips.component.html
+++ b/src/app/mobile-app-trips/mobile-app-trips.component.html
@@ -67,6 +67,8 @@
             <div *ngIf="!Consumeractivetrip?.length">
               <div class="text-center">
                 <span>No Active B2C Trips</span>
+                <!-- <button mat-raised-button class="more-btn" (click)="click()">click</button> -->
+
               </div>
             </div>
           </mat-card>
