--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -20,13 +20,13 @@
     align-items: center;
 }
 .export-btn{
-    background-color: #21aa47;
+    background-color: #ed1c24;
     color: #fff;
 }
  .spinner {
     font-weight: 600;
     font-size: 20px;
-   color: #21aa47;
+   color: #ed1c24;
 }
 
 @keyframes spin {
