--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -44,7 +44,8 @@ $font-16: 16px;
 $light-text: #a6b7bf;
 $themecolor: #003A4B;
 // $themecolor: #21aa47;
-$themecolor-alt: #21aa47;
+// $themecolor-alt: #21aa47;
+$themecolor-alt: #ED1C24;
 $themecolor-dark: #028ee1;
 
 /*bootstrap Color*/
