--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -6,27 +6,28 @@
   <div fxFlex.gt-sm="100" fxFlex="100">
 
 
-<!-- <div class="overlay" *ngIf="searchLoad">
+    <!-- <div class="overlay" *ngIf="searchLoad">
   <div class="spinner"> Loading......!!!</div>
 </div> -->
 
-    <div class="container-fluid " >
-      <div class="row p-3"> 
+    <div class="container-fluid ">
+      <div class="row p-3">
         <div class="text-end">
-          <button *ngIf="customer_list?.length" mat-raised-button class="mb-1 export-btn" (click)="downloadExport()" >Export</button>
-         </div>
+          <button *ngIf="customer_list?.length" mat-raised-button class="mb-1 export-btn"
+            (click)="downloadExport()">Export</button>
+        </div>
         <div class="col-sm-12 col-md-3 col-lg-3 customerbtn">
           <div class="px-3">
-          <button type="button" class="btn  buttons ">
-            <span class="customer"> B2C Customers</span>
-            <span class="badge badge-light violet">{{totalCount}}</span>
-          </button>
-          
+            <button type="button" class="btn  buttons ">
+              <span class="customer"> B2C Customers</span>
+              <span class="badge badge-light violet">{{totalCount}}</span>
+            </button>
+
           </div>
-         
+
         </div>
-      
-      </div> 
+
+      </div>
       <!-- <div class="row p-3">
         <div class="col-md-3 col-sm-12">
           <button type="button" class="btn  buttons" style="background-color:#fff;width:100%;">
@@ -46,10 +47,10 @@
                       <div class=" d-flex">
                         <div class=" searchone">
                           <div class="input-group">
-                            <input type="search" placeholder="Search Customers"
-                              autocomplete="off" class="form-control" (input)="searchCustomer($event)">
+                            <input type="search" placeholder="Search Customers" autocomplete="off" class="form-control"
+                              (input)="searchCustomer($event)">
                             <div class="input-group-append"><button class="btn btnsearch" type="submit" value="search"
-                                style="background: #21AA47;padding: 0.38rem 0.65rem;border-radius: 0px 5px 5px 0px;">
+                                style="background: #ed1c24;padding: 0.38rem 0.65rem;border-radius: 0px 5px 5px 0px;">
                                 <i class="fas fa-search text-white"></i>
                               </button>
                             </div>
@@ -86,7 +87,7 @@
 
                   </div>
                   <div>
-                    <mat-paginator  (page)="pageChange($event)" [pageSize]="limit" [pageIndex]="currentPage"
+                    <mat-paginator (page)="pageChange($event)" [pageSize]="limit" [pageIndex]="currentPage"
                       aria-label="Select page" [length]="totalCount">
                     </mat-paginator>
                   </div>
