--- a/src/app/layouts/full/vertical-sidebar/vertical-sidebar.component.html
+++ b/src/app/layouts/full/vertical-sidebar/vertical-sidebar.component.html
@@ -2,7 +2,7 @@
 <!-- sidebar -->
 <!-- ============================================================== -->
 <div class="user-profile"
-    style="background: url(assets/images/sidebar_images.jpg) no-repeat;background-size: cover;background-position: center;">
+    style="background: url(assets/images/del_3.png) no-repeat;background-size: cover;background-position: center;">
     <!-- User profile image -->
     <div class="profile-img">
         <!-- <img src="assets/images/custm-nbb/user_dummy.png" alt="user"> -->
