--- a/src/app/mobile-app-trips/mobile-app-trips.component.scss
+++ b/src/app/mobile-app-trips/mobile-app-trips.component.scss
@@ -17,16 +17,16 @@
 .spinner {
   font-weight: 600;
   font-size: 20px;
-  color: #21aa47;
+  color: #ed1c24;
 }
 .active-badge {
   margin-left: 10px;
   top: 13px;
-  background-color: #21aa47;
+  // background-color: #ed1c24;
 }
 .mat-badge-content {
-  color: white;
-  background: #21aa47;
+  color: #ed1c24 !important;
+  background: #d6dcd7 !important;
 }
 .assign-btn {
   background-color: #21aa47;
@@ -37,19 +37,19 @@
   border-bottom: 1px solid #e0e0e0;
   padding: 8px;
 }
-::ng-deep span#mat-badge-content-0 {
-  background: #21aa47 !important;
-  color: #ffffff !important;
-}
-::ng-deep span#mat-badge-content-1 {
-  background: #21aa47 !important;
-}
+// ::ng-deep span#mat-badge-content-0 {
+//   background: #ed1c24 !important;
+//   color: #ffffff !important;
+// }
+// ::ng-deep span#mat-badge-content-1 {
+//   background: #ed1c24 !important;
+// }
 .card-view {
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
 }
 .more-btn {
-  background-color: #21aa47 !important;
+  background-color: #ed1c24 !important;
   color: #ffffff !important;
   line-height: 30px;
 }
@@ -81,7 +81,7 @@
   align-items: baseline;
   box-sizing: border-box;
   width: 100%;
-  border: 1px solid #21aa47 !important;
+  border: 1px solid #000 !important;
 }
 
 ::ng-deep.mat-form-field-underline {
