--- a/src/app/payout/payout.component.scss
+++ b/src/app/payout/payout.component.scss
@@ -54,7 +54,7 @@ button.disable {
     border-radius: 5px;
 }
 .exportreport{
-    background: #21aa47;
+    background: #ed1c24;
     border: none;
     // padding: 3px 20px;
     border-radius: 5px;
