--- a/src/app/stamp-document/stamp-document.component.scss
+++ b/src/app/stamp-document/stamp-document.component.scss
@@ -16,7 +16,7 @@
 .spinner {
   font-weight: 600;
   font-size: 20px;
-  color: #21aa47;
+  color: #ed1c24;
 }
 .b2b-card {
   margin: 0px;
@@ -24,14 +24,14 @@
 .active-badge {
   margin-left: 10px;
   top: 13px;
-  background-color: #21aa47;
+  // background-color: #ed1c24;
 }
 .mat-badge-content {
-  color: white;
-  background: #21aa47;
+  color: #ed1c24;
+  background: #d6dcd7;
 }
 .assign-btn {
-  background-color: #21aa47;
+  background-color: #ed1c24;
   color: #fff;
   line-height: 30px;
 }
@@ -40,18 +40,18 @@
   padding: 8px;
 }
 ::ng-deep span#mat-badge-content-0 {
-  background: #21aa47 !important;
+  background: #ed1c24 !important;
   color: #ffffff !important;
 }
 ::ng-deep span#mat-badge-content-1 {
-  background: #21aa47 !important;
+  background: #ed1c24 !important;
 }
 .card-view {
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
 }
 .more-btn {
-  background-color: #21aa47 !important;
+  background-color: #ed1c24 !important;
   color: #ffffff !important;
   line-height: 30px;
 }
@@ -84,7 +84,7 @@
   align-items: baseline;
   box-sizing: border-box;
   width: 100%;
-  border: 1px solid #21aa47 !important;
+  border: 1px solid #ed1c24 !important;
 }
 
 ::ng-deep.mat-form-field-underline {
