--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,9 +18,27 @@ body {
   height: 56px !important;
   padding: 0 30px !important;
 }
-
+.toast-success {
+  background-color: #ed1c24 !important;
+  /* Set the background color for success toast */
+  color: #fff;
+  /* Set the text color for success toast */
+}
+.toast-error {
+  background-color: #ed1c24 !important;
+  /* Set the background color for success toast */
+  color: #fff;
+  /* Set the text color for success toast */
+}
+.toast-warning {
+  background-color: #ed1c24 !important;
+  /* Set the background color for success toast */
+  color: #fff;
+  /* Set the text color for success toast */
+}
 .right-color {
-  background: #ED1C24 !important;
+  // background: #efe2e2 !important;
+  background: #efcdd5 !important;
 }
 
 .pl_0 {
@@ -112,7 +130,10 @@ body {
 
 // .side-navcontent-fixed {
 // }
-
+.mat-toolbar.mat-primary {
+  // background: #1e88e5;
+  color: #000 !important;
+}
 .user-profile .profile-img {
   width: 50px;
   height: 50px;
@@ -133,7 +154,9 @@ body {
 }
 
 .logo-width {
-  width: 60px;
+  // width: 60px;
+  width: 100px;
+  
 }
 
 .title-head {
@@ -219,13 +242,14 @@ body {
 
 .login-register {
   justify-content: center !important;
+      background: #efdcdd !important;
 }
 
 // login css
 
 .login-head {
   img {
-    height: 86px;
+    height: 50px;
   }
 
   h4 {
