--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -34,12 +34,12 @@
                 </div>
               </div>
 
-              <div class="col-md-3 col-lg-2 col-sm-12 mt-2 mx-4">
+              <!-- <div class="col-md-3 col-lg-2 col-sm-12 mt-2 mx-4">
 
                   <ng-select  [items]="customerList" [clearable]="false" bindValue="_id" (change)="onSelectionChange($event)"[searchable]="true" bindLabel="name" placeholder="Select SubAdmin">
                   </ng-select>
               
-              </div>
+              </div> -->
             </div>
 
           </div>
